[package]
name = "tillandsias-vault-client"
version = "0.1.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "HashiCorp Vault client + policy templates for the tillandsias-vault container."
publish = false

[dependencies]
tillandsias-core = { path = "../tillandsias-core" }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zeroize = "1"
hkdf = "0.12"
sha2 = "0.10"
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
