[package]
name = "tillandsias-vm-layer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Idiomatic VM-exec abstraction: wsl --exec on Windows, Virtualization.framework spawn on macOS. Mirrors the discipline of tillandsias-podman."
publish = false

[dependencies]
tokio = { workspace = true, features = ["process", "io-util", "rt"] }
serde = { workspace = true }
async-trait = { workspace = true }
# Behind the `download` feature only (see [features]).
reqwest = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Console", "Win32_System_Threading", "Win32_Foundation"] }

# @trace spec:vm-idiomatic-layer, spec:macos-native-tray, spec:vsock-transport
# Pin exact patch so CI + dev hosts resolve identically. Generous feature set
# enables the Virtualization.framework surface VzRuntime needs: bootloader,
# storage, network, serial, entropy, balloon, vsock, and virtio-fs.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-virtualization = { version = "=0.2.2", features = [
  "VZVirtualMachine",
  "VZVirtualMachineConfiguration",
  "VZVirtualMachineDelegate",
  "VZBootLoader",
  "VZEFIBootLoader",
  "VZEFIVariableStore",
  "VZStorageDeviceConfiguration",
  "VZStorageDeviceAttachment",
  "VZVirtioBlockDeviceConfiguration",
  "VZDiskImageStorageDeviceAttachment",
  "VZNetworkDeviceConfiguration",
  "VZNetworkDeviceAttachment",
  "VZVirtioNetworkDeviceConfiguration",
  "VZNATNetworkDeviceAttachment",
  "VZMACAddress",
  "VZSerialPortConfiguration",
  "VZSerialPortAttachment",
  "VZVirtioConsoleDeviceSerialPortConfiguration",
  "VZFileHandleSerialPortAttachment",
  "VZEntropyDeviceConfiguration",
  "VZVirtioEntropyDeviceConfiguration",
  "VZMemoryBalloonDeviceConfiguration",
  "VZVirtioTraditionalMemoryBalloonDeviceConfiguration",
  "VZSocketDevice",
  "VZSocketDeviceConfiguration",
  "VZVirtioSocketDeviceConfiguration",
  "VZVirtioSocketDevice",
  "VZVirtioSocketConnection",
  "VZVirtioSocketListener",
  "VZDirectorySharingDeviceConfiguration",
  "VZVirtioFileSystemDeviceConfiguration",
  "VZDirectoryShare",
  "VZSharedDirectory",
  "VZSingleDirectoryShare",
  "VZGenericPlatformConfiguration",
  "VZPlatformConfiguration",
  "VZError",
  "block2",
] }
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = [
  "NSError",
  "NSURL",
  "NSString",
  "NSObject",
  "NSFileHandle",
  "NSArray",
  "NSData",
] }
block2 = "0.5"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "io-util", "rt", "fs"] }
tempfile = "3"

[features]
default = []
# @trace spec:vm-idiomatic-layer — host-side fake (Linux dev loop) runs the
# requested argv directly via tokio::process so unit tests can validate the
# trait + the WSL/VZ exec semantics without a real VM.
fake = []
# @trace spec:vm-provisioning-lifecycle — verified, resumable artifact
# downloads (rootfs + headless binary). Pulls reqwest+rustls; enabled by the
# native tray crates, off for trait-only / cross-build checks.
download = ["dep:reqwest", "dep:sha2", "dep:serde_json", "tokio/fs"]
