[package]
name = "tillandsias-vm-layer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Idiomatic VM-exec abstraction: wsl --exec on Windows, Virtualization.framework spawn on macOS. Mirrors the discipline of tillandsias-podman."
publish = false

# Drive the recipe materializer end-to-end from the command line — Task §8.2
# of vm-recipe-provisioning. Requires the `materialize` feature for the
# subprocess + sha2 + recipe parser imports.
[[bin]]
name = "materialize-cli"
path = "src/bin/materialize-cli.rs"
required-features = ["materialize"]

[dependencies]
tokio = { workspace = true, features = ["process", "io-util", "rt", "time"] }
serde = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
# vsock port constant only (CONTROL_WIRE_VSOCK_PORT). VzRuntime::wait_ready
# probes the in-VM headless's vsock listener after the VM reaches state ==
# Running. No cycle: control-wire does NOT depend on vm-layer.
# @trace spec:vsock-transport
tillandsias-control-wire = { workspace = true }
# Behind the `download` feature only (see [features]).
reqwest = { workspace = true, optional = true }
sha2 = { workspace = true }
serde_json = { workspace = true, optional = true }
tar = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
xz2 = { workspace = true, optional = true }
# Behind the `recipe` feature only — manifest.toml parsing.
toml = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Foundation",
    # HvSocket transport (transport_windows.rs / GuestTransport backend)
    "Win32_Networking_WinSock",
    # Token elevation probe (order 312: hcsdiag needs elevation; classify
    # the VM-ID lookup failure instead of reporting "distro not started")
    "Win32_Security",
] }

# @trace spec:vm-idiomatic-layer, spec:macos-native-tray, spec:vsock-transport
# Pin exact patch so CI + dev hosts resolve identically. Generous feature set
# enables the Virtualization.framework surface VzRuntime needs: bootloader,
# storage, network, serial, entropy, balloon, vsock, and virtio-fs.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-virtualization = { version = "=0.2.2", features = [
  "VZVirtualMachine",
  "VZVirtualMachineConfiguration",
  "VZVirtualMachineDelegate",
  "VZBootLoader",
  "VZEFIBootLoader",
  "VZEFIVariableStore",
  "VZStorageDeviceConfiguration",
  "VZStorageDeviceAttachment",
  "VZVirtioBlockDeviceConfiguration",
  "VZDiskImageStorageDeviceAttachment",
  "VZNetworkDeviceConfiguration",
  "VZNetworkDeviceAttachment",
  "VZVirtioNetworkDeviceConfiguration",
  "VZNATNetworkDeviceAttachment",
  "VZMACAddress",
  "VZSerialPortConfiguration",
  "VZSerialPortAttachment",
  "VZVirtioConsoleDeviceSerialPortConfiguration",
  "VZFileHandleSerialPortAttachment",
  "VZEntropyDeviceConfiguration",
  "VZVirtioEntropyDeviceConfiguration",
  "VZMemoryBalloonDeviceConfiguration",
  "VZVirtioTraditionalMemoryBalloonDeviceConfiguration",
  "VZSocketDevice",
  "VZSocketDeviceConfiguration",
  "VZVirtioSocketDeviceConfiguration",
  "VZVirtioSocketDevice",
  "VZVirtioSocketConnection",
  "VZVirtioSocketListener",
  "VZDirectorySharingDeviceConfiguration",
  "VZVirtioFileSystemDeviceConfiguration",
  "VZDirectoryShare",
  "VZSharedDirectory",
  "VZSingleDirectoryShare",
  "VZGenericPlatformConfiguration",
  "VZPlatformConfiguration",
  "VZError",
  "block2",
] }
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = [
  "NSError",
  "NSURL",
  "NSString",
  "NSObject",
  "NSFileHandle",
  "NSArray",
  "NSData",
] }
block2 = "0.5"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "io-util", "rt", "fs"] }
tempfile = "3"

[features]
default = []
# @trace spec:vm-idiomatic-layer — host-side fake (Linux dev loop) runs the
# requested argv directly via tokio::process so unit tests can validate the
# trait + the WSL/VZ exec semantics without a real VM.
fake = []
# @trace spec:vm-provisioning-lifecycle — verified, resumable artifact
# downloads (rootfs + headless binary). Pulls reqwest+rustls; enabled by the
# native tray crates, off for trait-only / cross-build checks.
download = ["dep:reqwest", "dep:serde_json", "dep:tar", "dep:flate2", "dep:xz2", "tokio/fs"]
# @trace spec:vm-provisioning-lifecycle — shared (co-owned) Recipefile +
# manifest.toml parser for the recipe materializer. Pure parsing, no VM.
recipe = ["dep:toml"]
# @trace spec:vm-provisioning-lifecycle §3-§4 — recipe materializer driver:
# layer-key derivation, on-disk cache, executor trait, recipe-trace JSONL
# ledger, GC. Linux-host owns the driver (lease linux-l-mat-2026-05-25T15Z);
# per-OS converters (§3.7.1 macOS .img, §3.7.2 WSL --import) are sibling
# claims and live in their own submodules.
materialize = ["recipe", "dep:serde_json", "dep:tar", "dep:flate2", "dep:xz2"]
