[package]
name = "tillandsias-windows-tray"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Native Win32 NotifyIcon tray for Tillandsias on Windows; drives a WSL2-hosted headless tillandsias VM."
publish = false

[[bin]]
name = "tillandsias-tray"
path = "src/main.rs"

[dependencies]
tillandsias-host-shell = { path = "../tillandsias-host-shell" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }
