[package]
name = "tillandsias-windows-tray"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Native Win32 NotifyIcon tray for Tillandsias on Windows; drives a WSL2-hosted headless tillandsias VM."
publish = false
build = "build.rs"

[[bin]]
name = "tillandsias-tray"
path = "src/main.rs"

[dependencies]
tillandsias-host-shell = { path = "../tillandsias-host-shell" }
# Base (no download): on non-Windows targets the wsl_lifecycle module is a stub
# and never calls the fetch path, so Linux/macOS workspace builds must NOT pull
# reqwest through this crate. The `download` feature is enabled only for the
# Windows target below — keeps the linux-next integration build lean.
tillandsias-vm-layer = { path = "../tillandsias-vm-layer" }
tillandsias-control-wire = { path = "../tillandsias-control-wire" }
tillandsias-secure-channel = { path = "../tillandsias-secure-channel" }
tillandsias-core = { path = "../tillandsias-core" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
# Machine-readable `--diagnose --json` output for installed-tray support tooling.
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
# The real provisioning fetch path only compiles on Windows, so the download
# feature (reqwest+rustls+sha2) is pulled only here. Cargo unions this with the
# base [dependencies] entry above.
# `recipe` adds the Manifest parser (l9 `[output]` URL template + expected SHA);
# `materialize` provides the `wsl::tar_to_wsl_import` converter; `download` is the
# verified-fetch path. Together they back the w5 recipe-provisioning flip.
tillandsias-vm-layer = { path = "../tillandsias-vm-layer", features = [
    "download",
    "recipe",
    "materialize",
] }
windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security_Credentials",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_Networking_WinSock",
] }
uuid = { workspace = true }
# File-based tracing: a GUI-subsystem tray has no console, so logs must go to a
# file (%LOCALAPPDATA%\tillandsias\logs\tray.log) that "Open Log" can surface.
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tracing-appender = { workspace = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
uuid = { workspace = true }

[build-dependencies]
embed-resource = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
